--- a/style.css
+++ b/style.css
@@ -771,15 +771,15 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #ff5200;
+    background-color: #ED0000;
 }
 
 .tc-white {
-    color: #ff5200!important;
+    color: #ED0000!important;
 }
 
 .btn-atomic-tangerine {
-    background: #ff5200;
+    background: #ED0000;
     color: #FFFFFF!important;
 }
 
@@ -797,7 +797,7 @@ h4 {
 }
 
 .ltc-atomic-tangerine {
-    color: #ff5200!important;
+    color: #ED0000!important;
 }
 
 .ltc-atomic-tangerine:hover {
